# crayonrs

./: Cargo.toml
src/: color_types.rs  lib.rs  ops.rs  tests.rs  util.rs
src/color_types/: hex_color.rs  rgb_color.rs
src/tests/: hex_conversion_testing.rs
